Fixed flip-flop p bottom spacing

--- a/css/models/flip-flop.css
+++ b/css/models/flip-flop.css
@@ -9,27 +9,27 @@
 }
 
 .flip-flop .flip {
-    width: 90px;
-    height: 90px;
-    padding: 10px;
+    width: 100px;
+    height: 100px;
+    margin: 10px;
 }
 
 .flip-flop .flip img {
-    width: 90px;
-    height: 90px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     border-radius: 5px;
 }
 
 .flip-flop .flop {
     font-size: 18px;
-    margin-right: 10px;
+    margin: 10px;
+    margin-left: 0;
 }
 
 .flip-flop .flop h2 {
     padding: 0;
     margin: 0;
-    margin-top: 10px;
 }
 
 .flip-flop .flop p {
